--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ textarea{
   border: none;
   resize: none;
   color: #000000;
+  margin-left: 15px;
   border-left: 1px solid black;
   padding: 10px;
   width: auto;
@@ -46,17 +47,17 @@ textarea{
 }
 
 .past {
-  background-color: #343435;
+  background-color: darkgray;
   color: white;
 }
 
 .present {
-  background-color: lightblue;
+  background-color: blue;
   color: black;
 }
 
 .future {
-  background-color: #cacaca;
+  background-color: lightblue;
   color: black;
 }
 
